# xapian-bindings

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: manylinux.yml
xapian/: bindings.py
xapianpy/: __init__.py
