[tool.poetry]
name = "xapianpy"
version = "0.1.0"
description = "Python bindings for Xapian search engine"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^67.7.2"
sphinx = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
