[bumpversion]
commit = True
current_version = 0.0.1
tag = True
tag_name = {new_version}

#[bumpversion:file:xapian/bindings.py]

[metadata]
name = xapian-bindings
version = 0.0.1
author = Chris Church
author_email = chris@ninemoreminutes.com
description = FIXME
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = xapian, bindings, haystack
license = BSD
url = https://github.com/ninemoreminutes/xapian-bindings/
project_urls = 
	Documentation = https://github.com/ninemoreminutes/xapian-bindings/
	Source = https://github.com/ninemoreminutes/xapian-bindings/
	Tracker = https://github.com/ninemoreminutes/xapian-bindings/issues
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
# packages = xapian
include_package_data = True
zip_safe = False
install_requires =
	requests
	sphinx

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[bdist_wheel]
universal = 0

[aliases]
check = twine_check
upload = twine_upload
dev_build = clean flake8 test egg_info sdist bdist_wheel twine_check
release_build = clean flake8 test egg_info -b "" sdist bdist_wheel twine_check
ship_it = release_build twine_upload

[pycodestyle]
ignore = E501
exclude = build,dist,.tox

[flake8]
ignore = E501
exclude = build,dist,.tox

